--- a/searching-service/.env.example
+++ b/searching-service/.env.example
@@ -3,5 +3,7 @@ MYSQL_DB_PORT=
 MYSQL_DB_USER=
 MYSQL_DB_PASSWORD=
 MYSQL_DB_NAME=
-QUEUE_CONNECTION_STRING=
-QUEUE_NAME=
+OPENAI_API_KEY=
+ELASTICSEARCH_HOST=
+ELASTICSEARCH_PORT=
+ELASTICSEARCH_INDEX=
