--- a/medicine-service/.env.example
+++ b/medicine-service/.env.example
@@ -3,5 +3,12 @@ MYSQL_DB_PORT=
 MYSQL_DB_USER=
 MYSQL_DB_PASSWORD=
 MYSQL_DB_NAME=
+
+OPENAI_API_KEY=
+
+ELASTICSEARCH_HOST=
+ELASTICSEARCH_PORT=
+ELASTICSEARCH_INDEX=
+
 QUEUE_CONNECTION_STRING=
 QUEUE_NAME=
